--- a/src/main/metadata/pages/VehiclePicker.page
+++ b/src/main/metadata/pages/VehiclePicker.page
@@ -45,6 +45,7 @@
        $scope.selectedBrand = "";
        $scope.selectedClass = "";
        $scope.selectedModel = ""; 
+       $scope.selectedColour = "";
        $scope.vehicleMilage = ""; 
        
        //COMPETITOR
@@ -54,11 +55,12 @@
        $scope.brands = [];
        $scope.relatedClasses = [];
        $scope.models = []; 
+       $scope.Colours = [];
        
        /*INTERESTED VEHICLE : Vehicle Intitialization details*/
        if($scope.leadVehicles.InterestedVehicle != undefined){
            $scope.vehicleDetailText = "Edit";
-           $scope.interestedVehicleDetails = $scope.leadVehicles.InterestedVehicle.Brand +' ' +$scope.leadVehicles.InterestedVehicle.Class + ' ' + $scope.leadVehicles.InterestedVehicle.Model;
+           $scope.interestedVehicleDetails = $scope.leadVehicles.InterestedVehicle.Brand +' ' +$scope.leadVehicles.InterestedVehicle.Class + ' ' + $scope.leadVehicles.InterestedVehicle.Model+ ' ' + $scope.leadVehicles.InterestedVehicle.Colour;
            $scope.checkedVehicleId;
            $scope.vehicleText = "(no vehicle entered)";
            $scope.vehicleDetail = false;
@@ -76,8 +78,14 @@
              $scope.vehicleModel = $scope.leadVehicles.InterestedVehicle.Model;
              $scope.selectedModel = $scope.vehicleModel;
            }
+           /*
            if($scope.leadVehicles.InterestedVehicle.Colour)
              $scope.interested_colourValue = $scope.leadVehicles.InterestedVehicle.Colour;
+           */ 
+           if($scope.leadVehicles.InterestedVehicle.Colour !=""){
+                $scope.colourModel = $scope.leadVehicles.InterestedVehicle.Colour;
+                $scope.selectedColour = $scope.colourModel;
+           }
            if($scope.leadVehicles.InterestedVehicle.Trim != "")
              $scope.interested_trimValue = $scope.leadVehicles.InterestedVehicle.Trim;
            if($scope.leadVehicles.InterestedVehicle.Mileage != "")
@@ -249,10 +257,35 @@
        }
        
         /*Method gets the Car Model values based on the Vehicle Type*/
+        
         $scope.getCarModelsForLeadVehicle = function(status_type, selected_Brand, selected_Class){
             $scope.brands = [];
             $scope.relatedClasses = [];
             $scope.models = [];
+            /*VF Remoting to fetch car models based on status type*/
+            
+            Visualforce.remoting.Manager.invokeAction(
+                 '{!$RemoteAction.VehiclePickerController.getCarModels}',status_type,
+                   function(result, event) {
+                        $scope.brand_class_modelWrap = result;
+                        $scope.brandsClasses = $scope.brand_class_modelWrap[0];
+                        for(var keyName in $scope.brandsClasses){
+                                $scope.brands.push(keyName);
+                        }
+                        $scope.classModel = $scope.brand_class_modelWrap[1];
+                        $scope.relatedClasses = $scope.brandsClasses[selected_Brand];
+                        $scope.models = $scope.classModel[selected_Class];
+                        $scope.$apply();
+             });
+        }
+        
+        // This was added to get colour as picklist values instead of text
+        $scope.getCarModelsForLeadInterestedVehicle = function(status_type, selected_Brand, selected_Class, selectedModel){
+            $scope.brands = [];
+            $scope.relatedClasses = [];
+            $scope.models = [];
+            $scope.realtedColours = [];
+            $scope.colours = [];
             /*VF Remoting to fetch car models based on status type*/
             Visualforce.remoting.Manager.invokeAction(
                  '{!$RemoteAction.VehiclePickerController.getCarModels}',status_type,
@@ -265,6 +298,19 @@
                         $scope.classModel = $scope.brand_class_modelWrap[1];
                         $scope.relatedClasses = $scope.brandsClasses[selected_Brand];
                         $scope.models = $scope.classModel[selected_Class];
+                        $scope.colorModel = $scope.brand_class_modelWrap[3];
+                        $scope.realtedColours = $scope.colorModel[selectedModel];
+                        if($scope.realtedColours != undefined){
+                            var temVar;
+                            for(var i = 0; i < $scope.realtedColours.length; i++){
+                                //console.log($scope.realtedColours[i].trim()+' '+$scope.selectedColour.trim());
+                                if(angular.equals($scope.realtedColours[i].trim().toLowerCase(), $scope.selectedColour.trim().toLowerCase())){
+                                    temVar = i;
+                                    //console.log(temVar);
+                                }
+                            }
+                                $scope.selectedColour = $scope.realtedColours[temVar];
+                            }
                         $scope.$apply();
              });
         }
@@ -283,7 +329,22 @@
         
          $scope.getSelectedModel = function (model_value){
             $scope.selectedModel = model_value;
-         }              
+         }   
+
+        $scope.setSelectedColour = function(model_selected){
+            $scope.realtedColours = $scope.colorModel[model_selected];
+            $scope.sortedClass = orderBy( $scope.realtedColours, '-' , false);
+            $scope.Colours = [];
+            
+         }
+         
+         $scope.setColourValue = function(model_selected){
+            $scope.Colours = $scope.colorModel[model_selected];
+         }
+        
+         $scope.getSelectedColour = function (selectedModel){
+            $scope.selectedColour = $scope.colorModel[selectedColour];
+         }
             
          $scope.refreshLookupData = function(details){
             if ($scope.vehicleList.length > 0)
@@ -415,7 +476,28 @@
             }
                 /*Fetch the car models based on status types here*/
                 $scope.getCarModelsForLeadVehicle($scope.status_type, selectedBrand, selectedClass+selectedBrand);
-          }  
+                
+          } 
+
+           $scope.showDetailforInterestedVehicle = function(vehicle_type, selectedBrand, selectedClass, selectedModel){
+                //console.log('This method was called on click');
+                $scope.status_type = 'Own Sellable';
+                $scope.vehicleDetail = true;
+                $scope.vehicleLookup = false;
+                //console.log(vehicle_type +' '+ selectedBrand +' '+ selectedClass +' '+ selectedModel);
+                //Others
+                $scope.vehicleDetailCompetitor = false;
+                $scope.vehicleLookupCompetitor = false;
+                $scope.vehicleDetailCurrent1 = false;
+                $scope.LookupCurrentVehicle1 = false;
+                $scope.vehicleDetailCurrent2 = false;
+                $scope.LookupCurrentVehicle2 = false;
+                $scope.vehicleDetailTradeIn = false;
+                $scope.TradeInLookup = false;
+                $scope.vehicleDetailPurchased = false;
+                $scope.PurchasedLookup = false;
+                $scope.getCarModelsForLeadInterestedVehicle($scope.status_type, selectedBrand, selectedClass+selectedBrand,selectedModel);
+           }
           
           $scope.selectBrandAction = function () {
                 $scope.vehicleBrand = ''+$scope.brandText;           
@@ -426,6 +508,7 @@
               $scope.brands.sort();
               $scope.relatedClasses.sort();
               $scope.models.sort();
+              
               $scope.vehicleDetail = false;
               $scope.leadVehicletype = vehicleType; 
               $scope.recordId = '{!currentRecordId}';             
@@ -463,7 +546,54 @@
                        }                            
               });
           };
-       
+          
+          // this was added since there was a seperation made for colour
+          $scope.saveInterestedVehicleDetail = function (vehicleType, operation) {
+              $scope.brands.sort();
+              $scope.relatedClasses.sort();
+              $scope.models.sort();
+              if($scope.realtedColours != undefined){
+                $scope.realtedColours.sort();
+              }
+              $scope.vehicleDetail = false;
+              $scope.leadVehicletype = vehicleType; 
+              $scope.recordId = '{!currentRecordId}';             
+              $scope.brandVal = document.getElementById("brandItems").value;
+              $scope.classVal = document.getElementById("classItems").value;
+              $scope.colourVal = document.getElementById("colourItems").value;
+              $scope.trimVal = document.getElementById("trimValue").value;
+              $scope.modelVal = document.getElementById("modelItems").value;
+              $scope.mileage = document.getElementById("mileageValue").value;               
+              $scope.vehicleAttributes = [ { 
+                                             Brand:$scope.brands[parseInt($scope.brandVal)], Class:$scope.relatedClasses[parseInt($scope.classVal)],
+                                              Colour:$scope.realtedColours[parseInt($scope.colourVal)], Model:$scope.models[$scope.modelVal],
+                                             Trim:$scope.trimVal,Mileage:$scope.mileage, LeadVehicleType:$scope.leadVehicletype,
+                                             CurrentRecordId:$scope.recordId, Lookup:"false", Operation:operation
+                                           }
+                                         ];
+              /*Remoting method here*/
+              Visualforce.remoting.Manager.invokeAction(
+                 '{!$RemoteAction.VehiclePickerController.updateVehicleDetails}',JSON.stringify($scope.vehicleAttributes[0]),
+                   function(result, event) {
+                       $scope.contacts = result;
+                       $scope.$apply();
+                       if (sforce.console.isInConsole()){
+                           function testGetFocusedSubtabId() {   
+                                sforce.console.getFocusedSubtabId(showTabId);
+                           }                            
+                           var showTabId = function showTabId(result) {
+                                var subtabId = result.id;
+                                sforce.console.refreshSubtabById(subtabId, true);
+                                    
+                           };
+                           testGetFocusedSubtabId();
+                       }else{
+                           window.top.location="/{!currentRecordId}";
+                       }                            
+              });
+          };
+          
+          
           /*Assign the Lookup vehicle to Lead*/
           $scope.saveItem = function (vehicleType) { 
               $scope.recordId = '{!currentRecordId}'; 
@@ -682,8 +812,8 @@
     <td>
         <input type="text" ng-model="interestedVehicleDetails"  disabled="disabled" style="width:300px" /> 
         <apex:outputPanel rendered="{!disableButtons}">
-        &nbsp;<input type="button" ng-disabled="{{vehicleDetailText == 'Edit'}}" ng-click="showDetail('Interested Vehicle',selectedBrand,selectedClasses);" onclick="KillSaveButton();" class="btn" value="{!$label.New_Button}" id="cmdSave"/>
-        &nbsp;<input type="button" ng-disabled="{{vehicleDetailText == 'New' || interestedRecType != 'Vehicle Product'}}" ng-click="showDetail('Interested Vehicle',selectedBrand,selectedClasses)" class="btn" value="{!$Label.Edit}"/>
+        &nbsp;<input type="button" ng-disabled="{{vehicleDetailText == 'Edit'}}" ng-click="showDetailforInterestedVehicle('Interested Vehicle',selectedBrand,selectedClasses,selectedBrand);" onclick="KillSaveButton();" class="btn" value="{!$label.New_Button}" id="cmdSave"/>
+        &nbsp;<input type="button" ng-disabled="{{vehicleDetailText == 'New' || interestedRecType != 'Vehicle Product'}}" ng-click="showDetailforInterestedVehicle('Interested Vehicle',selectedBrand,selectedClasses,selectedModel)" class="btn" value="{!$Label.Edit}"/>
         &nbsp;<input type="button" ng-click="clearVehicle('Interested Vehicle')" class="btn" value="{!$label.Clear_Button}"/>
         &nbsp;<!--<input type="button" ng-disabled="{{lead_Type != 'Used Car'|| interestedVehicleDetails != ''}}" ng-click="showList('Interested Vehicle')" class="btn" value="{!$label.Lookup_Button}"/>-->
         </apex:outputPanel>
@@ -695,24 +825,24 @@
                     <td>{!$label.Brand}</td>
                     <td><select id="brandItems" ng-model="selectedBrand" ng-change="setSelectedValue(selectedBrand)" ng-options="brand for brand in brands | orderBy:'toString()'"></select></td>
                     <td>{!$label.Class}</td>                  
-                    <td><select id="classItems" ng-model="selectedClasses" ng-blur="setModelValue(selectedClasses+selectedBrand)" ng-change="setModelValue(selectedClasses+selectedBrand)" ng-options="classes for classes in relatedClasses | orderBy:'toString()'"></select></td>                
-                </tr>
-                <tr>
-                    <td>{!$label.Colour}</td>
-                      <td><input id="colourValue" style="width:150px" ng-model="interested_colourValue"></input></td>
-                    <td>{!$label.Trim}</td>
-                    <td><input type="text" id="trimValue" style="width:150px" ng-model="interested_trimValue" ></input></td>
+                    <td><select id="classItems" ng-model="selectedClasses" ng-blur="setModelValue(selectedClasses+selectedBrand)" ng-change="setModelValue(selectedClasses+selectedBrand);setSelectedColour(selectedModel)" ng-options="classes for classes in relatedClasses | orderBy:'toString()'"></select></td>                
                 </tr>
                 <tr>
                     <td>{!$label.Model}</td>
-                    <td><select id="modelItems" style="width:150px" ng-change="getSelectedModel(selectedModel)" ng-model="selectedModel" ng-options="model for model in models | orderBy:'toString()'"></select></td>
+                    <td><select id="modelItems" style="width:150px" ng-change="getSelectedModel(selectedModel);setSelectedColour(selectedModel)" ng-model="selectedModel" ng-options="model for model in models | orderBy:'toString()'"></select></td>
+                    <td>{!$label.Colour}</td>
+                      <td><select id="colourItems" style="width:150px" ng-model="selectedColour" ng-change="getSelectedColour(selectedColour)" ng-options="colour for colour in realtedColours | orderBy:'toString()'"></select></td>                   
+                </tr>
+                <tr>
+                    <td>{!$label.Trim}</td>
+                    <td><input type="text" id="trimValue" style="width:150px" ng-model="interested_trimValue" ></input></td>
                     <td>{!$label.Mileage}</td>
                     <td><input id="mileageValue" type="text" ng-model="vehicleMilage" style="width:150px" /></td>
                 </tr> 
             </table>
             <br/>
             <input type="button" ng-click="cancelDetail('Interested Vehicle')" class="btn" value="{!$label.Cancel_Button}"/>&nbsp;
-            <input type="button" ng-click="saveDetail('Interested Vehicle', vehicleDetailText)" class="btn" value="{!$label.Save_Button}"/> 
+            <input type="button" ng-click="saveInterestedVehicleDetail('Interested Vehicle', vehicleDetailText)" class="btn" value="{!$label.Save_Button}"/> 
         </div>
         <!------------ INTERESTED VEHICLE LOOKUP SECTION ---------------------->
         <div ng-if="vehicleLookup" style="background-color:#efefef;width:500px">
@@ -773,9 +903,11 @@
         {!$label.Vehicle_Picker_Current1}&nbsp;</td>
         <td><input type="text" ng-model="CurrentVehicle1Details"  disabled="disabled" style="width:300px" /> 
         <apex:outputPanel rendered="{!disableButtons}"> 
+        <!--
         &nbsp;<input type="button" ng-disabled="{{vehicleCurrent1DetailText == 'Edit'}}" ng-click="showDetail('CurrentVehicle1',selectedCurrent1Brand,selectedCurrent1Classes)"  class="btn" value="{!$label.New_Button}"/>
         &nbsp;<input type="button" ng-disabled="{{vehicleCurrent1DetailText == 'New' || c1_RecType != 'Vehicle Product'}}" ng-click="showDetail('CurrentVehicle1',selectedCurrent1Brand,selectedCurrent1Classes)" class="btn" value="{!$Label.Edit}"/>
         &nbsp;<input type="button" ng-click="clearVehicle('CurrentVehicle1')" class="btn" value="{!$label.Clear_Button}"/> 
+        -->
         &nbsp;<input type="button" ng-disabled="{{CurrentVehicle1Details != ''}}" ng-click="showList('CurrentVehicle1')" class="btn" value="{!$label.Lookup_Button}"/>
         </apex:outputPanel>
         <!----------- CURRENT VEHICLE1 DETAILS SECTION -------->
@@ -825,9 +957,11 @@
         {!$label.Vehicle_Picker_Current2}&nbsp;</td>
         <td><input type="text" ng-model="CurrentVehicle2Details"  disabled="disabled" style="width:300px" /> 
         <apex:outputPanel rendered="{!disableButtons}">
+        <!--
         &nbsp;<input type="button" ng-disabled="{{vehicleCurrent2DetailText == 'Edit'}}" ng-click="showDetail('CurrentVehicle2',selectedCurrent2Brand,selectedCurrent2Classes)"  class="btn" value="{!$label.New_Button}"/>
         &nbsp;<input type="button" ng-disabled="{{vehicleCurrent2DetailText == 'New' || c2_RecType != 'Vehicle Product'}}" ng-click="showDetail('CurrentVehicle2',selectedCurrent2Brand,selectedCurrent2Classes)" class="btn" value="{!$Label.Edit}"/>
         &nbsp;<input type="button" ng-click="clearVehicle('CurrentVehicle2')" class="btn" value="{!$label.Clear_Button}"/> 
+        -->
         &nbsp;<input type="button" ng-disabled="{{CurrentVehicle2Details != ''}}" ng-click="showList('CurrentVehicle2')" class="btn" value="{!$label.Lookup_Button}"/>
         </apex:outputPanel>
         <!----------- CURRENT VEHICLE2 DETAILS SECTION -------->
@@ -932,9 +1066,11 @@
         <td>                        
         <input type="text" ng-model="purchasedVehicleDetails"  disabled="disabled" style="width:300px" /> 
         <apex:outputPanel rendered="{!disableButtons}">
+        <!--
         &nbsp;<input type="button" ng-disabled="{{purchasedVehicleDetailText == 'Edit'}}" ng-click="showDetail('Purchased',selectedPurchasedBrand,selectedPurchasedClasses)"  class="btn" value="{!$label.New_Button}"/>
         &nbsp;<input type="button" ng-disabled="{{purchasedVehicleDetailText == 'New' || Purchased_RecType != 'Vehicle Product'}}" ng-click="showDetail('Purchased',selectedPurchasedBrand,selectedPurchasedClasses)" class="btn" value="{!$Label.Edit}"/>
         &nbsp;<input type="button" ng-click="clearVehicle('Purchased')" class="btn" value="{!$label.Clear_Button}"/> 
+        -->
         &nbsp;<input type="button" ng-disabled="{{purchasedVehicleDetails != ''}}" ng-click="showList('Purchased')" class="btn" value="{!$label.Lookup_Button}"/>
         </apex:outputPanel>
         <!----------- PURCHASED VEHICLE DETAILS SECTION -------->
