--- a/src/main/metadata/pages/AddressSearchValidation.page
+++ b/src/main/metadata/pages/AddressSearchValidation.page
@@ -37,6 +37,10 @@
                             <apex:inputText value="{!objAccount.Name}" />
                         </apex:outputPanel>
                     </apex:pageBlockSectionItem>
+                        <apex:pageBlockSectionItem >
+                     <apex:outputLabel value="Touch Point" />
+                  <apex:inputText value="{!TouchPoint}"  />        
+                  </apex:pageBlockSectionItem> 
                     <!-- <apex:inputField value="{!objAccount.Name}" /> -->
                     <apex:inputField value="{!objAccount.Company_Name__c}" />
                     <apex:inputField value="{!objAccount.Company_Name_Native_1__c}" />               
@@ -49,7 +53,8 @@
                     <apex:inputField value="{!objAccount.Home_Phone_2__c}" />
                     <apex:inputField value="{!objAccount.Phone}" />
                     <apex:inputField value="{!objAccount.Email__c}" />
-                    <apex:inputField value="{!objAccount.Email2__c}" />                   
+                    <apex:inputField value="{!objAccount.Email2__c}" /> 
+                     <apex:inputField value="{!objPersonAccount.VIN__c}" />                      
                 </apex:pageBlockSection>
                
                 
@@ -68,6 +73,10 @@
                         <apex:inputText value="{!objPersonAccount.FirstName}" />
                         
                     </apex:pageBlockSectionItem>
+                     <apex:pageBlockSectionItem >
+                     <apex:outputLabel value="Touch Point" />
+                  <apex:inputText value="{!TouchPoint}"  />        
+                  </apex:pageBlockSectionItem> 
                     <!--  <apex:inputField value="{!objPersonAccount.LastName}" />
 <apex:inputField value="{!objPersonAccount.FirstName}" /> -->
                     <apex:inputField value="{!objPersonAccount.LastName_Native_1__c}" />
@@ -81,6 +90,7 @@
                     <apex:inputField value="{!objPersonAccount.Email__c}" />
                     <apex:inputField value="{!objPersonAccount.Email2__c}" />
                     <apex:inputField value="{!objPersonAccount.PersonBirthdate}" />
+                    <apex:inputField value="{!objPersonAccount.VIN__c}" />
                    
                     
                 </apex:pageBlockSection>
@@ -135,9 +145,10 @@
                    
                   <apex:inputField value="{!objPersonAccount.Email__c}" />                    
                   <apex:inputField value="{!objPersonAccount.PersonBirthdate}"/>
-				  <apex:inputField value="{!objPersonAccount.VIN__c}" />
+                  <apex:inputField value="{!objPersonAccount.VIN__c}" />
                   <apex:inputField value="{!objPersonAccount.MBK_Data_Source__c}" rendered="{!if(Market =='KR',True,false)}" style="width:160px" />     
-                  <apex:inputField value="{!objPersonAccount.Data_Source__c}" rendered="{!if(Market !='KR',True,false)}" style="width:160px"/>         
+                  <apex:inputField value="{!objPersonAccount.Data_Source__c}" rendered="{!if(Market !='KR',True,false)}" style="width:160px"/>     
+                   
                  
               </apex:pageBlockSection>
                
@@ -152,7 +163,7 @@
                             <apex:inputText value="{!objAccount.Name}" />
                         </apex:outputPanel>
                     </apex:pageBlockSectionItem>
-                  
+                   <apex:inputField value="{!objPersonAccount.VIN__c}" />    
                     <apex:inputField value="{!objAccount.Company_Name__c}" />              
                     <apex:inputField value="{!objAccount.Company_Legal_Form__c}" />  
                     <apex:pageBlockSectionItem >
@@ -188,7 +199,8 @@
                                   
                    <apex:inputField value="{!objAccount.Email__c}" />  
                    <apex:inputField value="{!objPersonAccount.MBK_Data_Source__c}" rendered="{!if(Market =='KR',True,false)}"/>                 
-                   <apex:inputField value="{!objPersonAccount.Data_Source__c}" rendered="{!if(Market !='KR',True,false)}"/>          
+                   <apex:inputField value="{!objPersonAccount.Data_Source__c}" rendered="{!if(Market !='KR',True,false)}"/>    
+                       
                 
                    <apex:inputField value="{!objAccount.Fax}" /> 
                 </apex:pageBlockSection>       
@@ -197,10 +209,10 @@
                 <apex:pageBlockSection title="{!$Label.Address_Information}" Id="AddrPBS">
                    
                     <apex:pageBlockSectionItem >
-                        <apex:outputLabel value="{!$ObjectType.Address__c.fields.Address_Type__c.Label}"/>
+                       <!-- <apex:outputLabel value="{!$ObjectType.Address__c.fields.Address_Type__c.Label}"/>
                             <apex:selectList value="{!addresspicklist}" multiselect="false" size="1" style="width:35%; white-space:none;">
                                 <apex:selectOptions value="{!AddressOptions}"/>
-                            </apex:selectList>
+                            </apex:selectList>-->
                         <!-- <apex:inputField value="{!AddressObj.Address_Type__c}"/> --> 
                     </apex:pageBlockSectionItem>
                    
@@ -236,7 +248,7 @@
                         <apex:outputLabel value="{!$ObjectType.Address__c.fields.HouseNumber__c.Label}"/>
                         <apex:inputField value="{!AddressObj.HouseNumber__c}"/>           
                     </apex:pageBlockSectionItem>
-					-->
+                    -->
                     <apex:pageBlockSectionItem rendered="{!IF(market != 'KR', true, false)}">
                         <apex:outputLabel value="{!$ObjectType.Address__c.fields.Block__c.Label}"/>
                         <apex:inputField value="{!AddressObj.Block__c}"/>           
@@ -265,13 +277,20 @@
                         <apex:outputLabel value="{!$ObjectType.Address__c.fields.Temp_Address__c.Label}"/>
                         <apex:inputField value="{!AddressObj.Temp_Address__c}"/>                        
                     </apex:pageBlockSectionItem>
+                 
                    
                 </apex:pageBlockSection>
                 <apex:pageBlockButtons location="bottom">
                     <apex:commandButton action="{!AddressSearchbyZipCode}"  value="{!$Label.Address_Search}" rendered="false"/>
-                    <apex:commandButton action="{!onLineDeduplication}" value="{!$Label.OnLine_Deduplication}" rendered="{!If(RecordType == 'Person Account' ,true,false)}"/>
+                    <!--<apex:commandButton action="{!onLineDeduplication}" value="{!$Label.OnLine_Deduplication}" rendered="{!If(RecordType == 'Person Account' ,true,false)}"/>-->
                     <apex:commandButton action="{!validateAddressByZipCode}" value="{!$Label.Validate}" reRender="AddrPBS"/>
-                    <apex:commandButton id="Savebtn" action="{!saveAccount}" value="{!$Label.Save_Button}"  rendered="{!If(RecordType == 'Person Account' || RecordType == 'Company',true,false)}" rerender="redirectPanel,msgs" status="actStatusId"/>
+                    <apex:outputPanel rendered="{!firstsave}" >
+                        <apex:commandButton id="Savebtn" action="{!saveAccount}" value="{!$Label.Save_Button}"  rendered="{!If(RecordType == 'Person Account' || RecordType == 'Company',true,false)}" rerender="redirectPanel,msgs" status="actStatusId"/>
+                 </apex:outputPanel>
+                     <apex:outputPanel rendered="{!secondsave}">
+                        <apex:commandButton id="Savebtn1" action="{!onLineDeduplication}" value="{!$Label.Save_Button}"  rendered="{!If(RecordType == 'Person Account' || RecordType == 'Company',true,false)}"  status="actStatusId"/>
+                     </apex:outputPanel>
+                      
                     <apex:outputPanel id="redirectPanel">                  
                         <apex:outputText rendered="{!refreshPage}">
                             <script type="text/javascript">
@@ -316,7 +335,7 @@
                     <apex:Column headerValue="{!$ObjectType.Account.fields.Email__c.Label}">                    
                         <apex:outputField value="{!cr.Email__c}"/>
                     </apex:Column>
-					 <apex:Column headerValue="{!$ObjectType.Account.fields.VIN__c.Label}">                    
+                     <apex:Column headerValue="{!$ObjectType.Account.fields.VIN__c.Label}">                    
                         <apex:outputField value="{!cr.VIN__c}"/>
                     </apex:Column>
                      
