--- a/src/main/metadata/pages/SendVehicletoSPOConfirmationJP.page
+++ b/src/main/metadata/pages/SendVehicletoSPOConfirmationJP.page
@@ -1,14 +1,39 @@
 <apex:page controller="cSendVehicletoSPOConfirmationJP" >
 <apex:form >
   <apex:pageBlock title="Selected Record">
+     
+     <apex:pageBlockTable value="{!VehRel}" var="ar">
+     
+     <apex:column value="{!ar.Vehicle_ID__r.UsVIN__c}" headerValue="US VIN Number"/>
+     <apex:column value="{!ar.Vehicle_ID__r.FirstRegistrationDate__c}" headerValue="First Registration Date"/>
+     </apex:pageBlockTable> 
+     <apex:pageBlockTable value="{!alc}" var="link">
+     
+     <apex:column value="{!link.Name}" headerValue="ACCOUNT LINK NAME"/>
+     
+     </apex:pageBlockTable> 
+     <apex:pageBlockTable value="{!acc}" var="accc">
+     
+     <apex:column value="{!accc.Name}" headerValue="ACCOUNT NAME"/>
+     
+     </apex:pageBlockTable> 
+      
+      
+      
+      
       <apex:pageBlockTable value="{!VehRel}" var="vr">
-          <apex:column value="{!vr.Contact__c}" headerValue="Customer Name"/>
-          <apex:column value="{!vr.Contact__r.Id}" headerValue="Customer Id"/>
-          <apex:column value="{!vr.Vehicle_ID__c}" headerValue="Vehicle ID"/>
+          
+          
           <apex:column value="{!vr.Name}" headerValue="VehicleRelation No"/>
+          <apex:column value="{!vr.Registration_Date__c}" headerValue="Registration Date" />
+          <apex:column value="{!vr.MOT_Owner_Name__c}" headerValue="MOT Owner Name" />
+          <apex:column value="{!vr.MOT_Owner_Address__c}" headerValue="MOT Owner Address" />
+          <apex:column value="{!vr.MOT_USER_NAME__c}" headerValue="MOT User Name" />
+          <apex:column value="{!vr.MOT_User_Address__c}" headerValue="MOT User Address" />
       </apex:pageBlockTable>
   </apex:pageBlock>
   
-  <apex:commandButton value="Send Information" action="{!sendtoSPO}" reRender="None"/> 
+  <apex:commandButton value="Send Information" action="{!sendtoSPO}" /> 
+  <apex:commandButton value="Back" action="{!backButton}" /> 
 </apex:form>
 </apex:page>
